--- a/template/FlexStart/assets/css/style.css
+++ b/template/FlexStart/assets/css/style.css
@@ -204,7 +204,7 @@ section {
   font-family: "Nunito", sans-serif;
   font-size: 16px;
   font-weight: 700;
-  color: #013289;
+  color: #9D7296;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -214,10 +214,10 @@ section {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #4154f1;
+  color: #BCAEC6;
 }
 .navbar .getstarted, .navbar .getstarted:focus {
-  background: #4154f1;
+  background: #BCAEC6;
   padding: 8px 20px;
   margin-left: 30px;
   border-radius: 4px;
@@ -412,7 +412,7 @@ section {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #4154f1;
+  background: #d1b1e3;
   box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
 }
 .hero .btn-get-started span {
@@ -495,7 +495,7 @@ section {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #4154f1;
+  background: #d1b1e3;
   box-shadow: 0px 5px 25px rgba(65, 84, 241, 0.3);
 }
 .about .btn-read-more span {
@@ -518,10 +518,15 @@ section {
 --------------------------------------------------------------*/
 .values .box {
   padding: 30px;
+  background-color: rgb(226, 226, 226);
   box-shadow: 0px 0 5px rgba(1, 41, 112, 0.08);
   text-align: center;
   transition: 0.3s;
   height: 100%;
+}
+
+.values {
+  background-color: #E0DBE4;
 }
 .values .box img {
   padding: 30px 50px;
