--- a/template/FlexStart/assets/css/style.css
+++ b/template/FlexStart/assets/css/style.css
@@ -518,7 +518,7 @@ section {
 --------------------------------------------------------------*/
 .values .box {
   padding: 30px;
-  background-color: rgb(226, 226, 226);
+  background-color: #ede1eb;
   box-shadow: 0px 0 5px rgba(1, 41, 112, 0.08);
   text-align: center;
   transition: 0.3s;
@@ -544,6 +544,9 @@ section {
 }
 .values .box:hover img {
   transform: scale(1);
+}
+.values .box p {
+  color: black;
 }
 
 /*--------------------------------------------------------------
