--- a/template/FlexStart/assets/css/style.css
+++ b/template/FlexStart/assets/css/style.css
@@ -61,7 +61,8 @@ section {
 }
 .section-testi-m {
   padding-top: 30px;
-  background-color: rgb(117, 172, 255);
+  background-color: #966D8B;
+  border-radius: 5px;
 }
 @media (max-width: 768px) {
   .section-header p {
@@ -446,7 +447,7 @@ section {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #d1b1e3;
+  background: #966D8B;
   box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
 }
 .hero .btn-get-started span {
@@ -588,6 +589,9 @@ section {
 --------------------------------------------------------------*/
 .counts {
   padding: 70px 0 60px;
+}
+.count-box img {
+  margin-right: 15px;
 }
 .counts .count-box {
   display: flex;
