--- a/template/FlexStart/assets/css/style.css
+++ b/template/FlexStart/assets/css/style.css
@@ -99,6 +99,7 @@ section {
 }
 .carousel-item img{
   margin-bottom: 20px;
+  margin-left: 40px;
 }
 
 /*--------------------------------------------------------------
@@ -155,7 +156,7 @@ section {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #4154f1;
+  background: #9E7397;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -167,7 +168,7 @@ section {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #6776f4;
+  background: #b478d6;
   color: #fff;
 }
 .back-to-top.active {
@@ -553,6 +554,7 @@ section {
 --------------------------------------------------------------*/
 .values .box {
   padding: 30px;
+  border-radius: 10px;
   background-color: #ede1eb;
   box-shadow: 0px 0 5px rgba(1, 41, 112, 0.08);
   text-align: center;
